Fixed bugs detected by findbugs.